Allow activation fullscreen overlays without tokens

If a fullscreen overlay layer surface is shown, allow activation
requests from it even without an activation token because it will be
painted above normal windows anyway.

If layer surfaces were cancelable, then we may not need such a special
case.

The coverage checks can be more sophisticated, but for the time being, I
think it is worth going with a simple anchor check.

CCBUG: 511258
BUG: 514204